<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"
         />
    <item
        android:id="@+id/polls"
        android:title="@string/polls"
        android:icon="@drawable/baseline_whatshot_24"/>
    <item
        android:id="@+id/uploadPost"
        android:title="@string/upload_post"
        android:icon="@drawable/baseline_add_circle_outline_24"/>
    <item
        android:id="@+id/trending"
        android:title="@string/trending"
        android:icon="@drawable/baseline_trending_up_24"/>
    <item
        android:id="@+id/account"
        android:title="@string/account"
        android:icon="@drawable/baseline_account_circle_24"/>

</menu>